# Slot-Machine

./: CMakeLists.txt  main.cpp
